add ListPkgs controller
